// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dateRangePickerDay does not render a disabled day if same day as today 1`] = `
<TouchableWithoutFeedback
  accessibilityComponentType="button"
  accessibilityLabel="Monday, August 12"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  disabled={false}
  onLongPress={[Function]}
  onPress={[Function]}
  testID="calendar-day-2019-7-12"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(44, 218, 157)",
            "borderRadius": 17,
            "height": 35,
            "width": 34,
          },
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Array [
            Object {
              "marginTop": 7,
              "textAlign": "center",
            },
            Object {},
            Object {},
          ]
        }
        type="small"
      >
        12
      </Text>
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`dateRangePickerDay renders a beginning of a range 1`] = `
<TouchableWithoutFeedback
  accessibilityComponentType="button"
  accessibilityLabel="Monday, August 12"
  accessibilityTraits={
    Array [
      "button",
      "selected",
    ]
  }
  disabled={false}
  onLongPress={[Function]}
  onPress={[Function]}
  testID="calendar-day-2019-7-12"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "height": 35,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 35,
            },
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 35,
            },
            Object {
              "backgroundColor": "rgb(44, 218, 157)",
            },
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(44, 218, 157)",
            "borderRadius": 17,
            "height": 35,
            "width": 34,
          },
          Object {
            "backgroundColor": "rgb(44, 218, 157)",
          },
        ]
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Array [
            Object {
              "marginTop": 7,
              "textAlign": "center",
            },
            Object {
              "color": "rgb(45, 47, 127)",
              "fontWeight": "bold",
            },
            Object {},
          ]
        }
        type="small"
      >
        12
      </Text>
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`dateRangePickerDay renders a beginning of a range 2`] = `
<TouchableWithoutFeedback
  accessibilityComponentType="button"
  accessibilityLabel="Monday, August 12"
  accessibilityTraits={
    Array [
      "button",
      "selected",
    ]
  }
  disabled={false}
  onLongPress={[Function]}
  onPress={[Function]}
  testID="calendar-day-2019-7-12"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "height": 35,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 35,
            },
            Object {
              "backgroundColor": "rgb(44, 218, 157)",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 35,
            },
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(44, 218, 157)",
            "borderRadius": 17,
            "height": 35,
            "width": 34,
          },
          Object {
            "backgroundColor": "rgb(44, 218, 157)",
          },
        ]
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Array [
            Object {
              "marginTop": 7,
              "textAlign": "center",
            },
            Object {
              "color": "rgb(45, 47, 127)",
              "fontWeight": "bold",
            },
            Object {},
          ]
        }
        type="small"
      >
        12
      </Text>
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`dateRangePickerDay renders a disabled day if before today 1`] = `
<TouchableWithoutFeedback
  accessibilityComponentType="button"
  accessibilityLabel="Monday, August 12"
  accessibilityTraits={
    Array [
      "button",
      "disabled",
    ]
  }
  disabled={true}
  onLongPress={[Function]}
  onPress={[Function]}
  testID="calendar-day-2019-7-12"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(44, 218, 157)",
            "borderRadius": 17,
            "height": 35,
            "width": 34,
          },
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Array [
            Object {
              "marginTop": 7,
              "textAlign": "center",
            },
            Object {},
            Object {
              "color": "#cecece",
            },
          ]
        }
        type="small"
      >
        12
      </Text>
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`dateRangePickerDay renders a marked day 1`] = `
<TouchableWithoutFeedback
  accessibilityComponentType="button"
  accessibilityLabel="Monday, August 12"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  disabled={false}
  onLongPress={[Function]}
  onPress={[Function]}
  testID="calendar-day-2019-7-12"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(44, 218, 157)",
            "borderRadius": 17,
            "height": 35,
            "width": 34,
          },
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Array [
            Object {
              "marginTop": 7,
              "textAlign": "center",
            },
            Object {},
            Object {},
          ]
        }
        type="small"
      >
        12
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "height": 35,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "borderRadius": 2,
              "height": 4,
              "marginBottom": 5,
              "width": 4,
            },
            Object {
              "backgroundColor": "rgb(44, 218, 157)",
            },
          ]
        }
      />
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`dateRangePickerDay renders a marked, selected day 1`] = `
<TouchableWithoutFeedback
  accessibilityComponentType="button"
  accessibilityLabel="Monday, August 12"
  accessibilityTraits={
    Array [
      "button",
      "selected",
    ]
  }
  disabled={false}
  onLongPress={[Function]}
  onPress={[Function]}
  testID="calendar-day-2019-7-12"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "height": 35,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 35,
            },
            Object {
              "backgroundColor": "rgb(44, 218, 157)",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 35,
            },
            Object {
              "backgroundColor": "rgb(44, 218, 157)",
            },
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(44, 218, 157)",
            "borderRadius": 17,
            "height": 35,
            "width": 34,
          },
          Object {
            "backgroundColor": "rgb(44, 218, 157)",
          },
        ]
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Array [
            Object {
              "marginTop": 7,
              "textAlign": "center",
            },
            Object {
              "color": "rgb(45, 47, 127)",
              "fontWeight": "bold",
            },
            Object {},
          ]
        }
        type="small"
      >
        12
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "height": 35,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "borderRadius": 2,
              "height": 4,
              "marginBottom": 5,
              "width": 4,
            },
            Object {
              "backgroundColor": "rgb(45, 47, 127)",
            },
          ]
        }
      />
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`dateRangePickerDay renders a middle of a range 1`] = `
<TouchableWithoutFeedback
  accessibilityComponentType="button"
  accessibilityLabel="Monday, August 12"
  accessibilityTraits={
    Array [
      "button",
      "selected",
    ]
  }
  disabled={false}
  onLongPress={[Function]}
  onPress={[Function]}
  testID="calendar-day-2019-7-12"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "height": 35,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 35,
            },
            Object {
              "backgroundColor": "rgb(44, 218, 157)",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 35,
            },
            Object {
              "backgroundColor": "rgb(44, 218, 157)",
            },
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(44, 218, 157)",
            "borderRadius": 17,
            "height": 35,
            "width": 34,
          },
          Object {
            "backgroundColor": "rgb(44, 218, 157)",
          },
        ]
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Array [
            Object {
              "marginTop": 7,
              "textAlign": "center",
            },
            Object {
              "color": "rgb(45, 47, 127)",
              "fontWeight": "bold",
            },
            Object {},
          ]
        }
        type="small"
      >
        12
      </Text>
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`dateRangePickerDay renders with a single selected day 1`] = `
<TouchableWithoutFeedback
  accessibilityComponentType="button"
  accessibilityLabel="Monday, August 12"
  accessibilityTraits={
    Array [
      "button",
      "selected",
    ]
  }
  disabled={false}
  onLongPress={[Function]}
  onPress={[Function]}
  testID="calendar-day-2019-7-12"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "height": 35,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 35,
            },
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 35,
            },
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(44, 218, 157)",
            "borderRadius": 17,
            "height": 35,
            "width": 34,
          },
          Object {
            "backgroundColor": "rgb(44, 218, 157)",
          },
        ]
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Array [
            Object {
              "marginTop": 7,
              "textAlign": "center",
            },
            Object {
              "color": "rgb(45, 47, 127)",
              "fontWeight": "bold",
            },
            Object {},
          ]
        }
        type="small"
      >
        12
      </Text>
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`dateRangePickerDay renders without date selection 1`] = `
<TouchableWithoutFeedback
  accessibilityComponentType="button"
  accessibilityLabel="Monday, August 12"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  disabled={false}
  onLongPress={[Function]}
  onPress={[Function]}
  testID="calendar-day-2019-7-12"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(44, 218, 157)",
            "borderRadius": 17,
            "height": 35,
            "width": 34,
          },
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Array [
            Object {
              "marginTop": 7,
              "textAlign": "center",
            },
            Object {},
            Object {},
          ]
        }
        type="small"
      >
        12
      </Text>
    </View>
  </View>
</TouchableWithoutFeedback>
`;
